2004-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.c (dwMatchTypes): structs must have matching
	SPEC_STRUCT
	* src/SDCCdwarf2.c (dwTagFromType): fix to handle recursive
	struct definitions
	* src/SDCCdwarf2.c (dwWriteModule, dwNewDebugSymbol, dwWriteEndFunction,
	dwWriteLabel): fix to create valid debugger symbols even when
	the module name has non-alphanumeric symbols in it
	* src/SDCCdwarf2.c (dwWriteSymbolInternal): better detection for
	when a variable's allocation has been optimized away
	

2004-05-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (hc08_emitDebuggerSymbol),
	* src/hc08/main.c,
	* src/mcs51/gen.c (mcs51_emitDebuggerSymbol),
	* src/mcs51/main.c,
	* src/ds390/gen.c (ds390_emitDebuggerSymbol),
	* src/ds390/main.c,
	* src/z80/gen.c (z80_emitDebuggerSymbol),
	* src/z80/main.c,
	* src/pic/gen.c (pic14_emitDebuggerSymbol),
	* src/pic/main.c,
	* src/pic16/gen.c (pic14_emitDebuggerSymbol),
	* src/pic16/main.c,
	* src/avr/gen.c (avr_emitDebuggerSymbol),
	* src/avr/main.c,
	* src/xa51/gen.c (xa51_emitDebuggerSymbol),
	* src/xa51/main.c,
	* src/SDCCdebug.c (emitDebuggerSymbol),
	* src/SDCCdebug.h,
	* src/port.h: added a debugger struct to the port struct. Added a
	callback for defining debugger symbols
	
	* src/SDCCast.c (createLabel),
	* src/SDCC.y (labeled_statement): mark all compiler generated labels
	with isitmp = 1
	* src/SDCCicode.h,
	* src/SDCCicode.c (geniCodeFunctionBody): added a link from the FUNCTION
	iCode back to the ast for the function
	
	* src/hc08/ralloc.c (hc08_assignRegisters),
	* src/hc08/ralloc.h: define a regs struct for the stack pointer. Removed
	unneeded fields from the regs struct.
	* src/hc08/gen.c (transferRegReg, genFunction, genEndFunction): use the
	pushReg() & pullReg() functions instead of emitcode()
	
	* src/hc08/gen.c (genLabel, genhc08Code),
	* src/SDCCdebug.h: Added additional debugger hooks needed for DWARF
	